About - Updating Content

--- a/jawaddev/home/templates/home/about.html
+++ b/jawaddev/home/templates/home/about.html
@@ -19,19 +19,18 @@
             <div class="media-body">
                 <h5 class="fw-bold mb-4">Professional Journey</h5>
                 <div class="bio site-article">
-                    <p>My story of falling in love with programming comes a long time after my story of falling in love with data analysis. During my school years, I was very good at maths and solving problems with logic. I was using computers from an early age having an Atari 820ST. Yeah, you know the ones, the top-loader cassettes that take a noisy forever to load a primitive game. Later, I had a Pentium 75 which got me through my sixth form years.</p>
-                    <p>Fortunately for me, my mum had secretarial skills and thought it would be a good idea for me to learn to type, which is of course a skill that has naturally stood me in good stead for a career in using computers. To this day, I cannot touch type in the tradional way and typing with my little fingers just seems totally alien. We can all be thankful for Intellisense! I can type at a fair pace without looking at the keyboard though and know so many keyboard shortcuts that I can be extremely efficient.</p>
-                    <p>Following using spreadsheets and extensive use of Microsoft Word to produce assignments within my sixth form years, I thought that it would be very useful if I were able to predict just how much money I would have at a given point in the future given certain assumptions around income and expenditure. I proceeded to lay out what I would later discover was called a Cash Flow Forecast. Week-on-week, it would have my earnings given the hours I was working as a Team Leader at a Stir Fry production company in addition to my expenses.</p>
-                    <p>It was a spreadsheet with many COUNTIFs, SUMIFs, VLOOKUPs which I had taught myself in order to be able to make the spreadsheet. With my background in computing and maths, I noticed that I was finding this extremely easy and just felt at ease and in flow with it.</p>
-                    <p>I was able to see the power of spreadsheets for "what-if" analysis and I was hooked. If I were to work an extra 5 hours per week, then in 3 months I would have x number of pounds more in additional savings! Wow! Mind blown!</p>
-                    <p>Of course, such analysis has become run of the mill having done it for so many years now.</p>
+                    <p>My tale of falling in love with Python and Django comes before my tale of falling in love with programming. I excelled in math and logical problem-solving during my school years. I believe the reason for that was that I had a home tutor for math. I had a Dell Pentium 4 when I first started using computers at a young age. We purchased it sometime in 2009 or 2010. It was a positive experience, and I'm happy I had it.</p>
+                    <p>Initially, I acquired knowledge about Microsoft Excel through an online course. Almost all of Excel's formulas and shortcuts were familiar to me at the time, I recalled. Though I wasn't old enough to use it in my career, I was good at it. Upon acquiring that ability, I chose to focus on designing rather than advancing it.</p>
+                    <p>I spent a lot of time designing. Initially, I didn't take a formal course in it, but instead watched a lot of tutorials. I've since completed online courses in Photoshop and Illustrator. Photoshop was the software I was using to work with. For 3D modeling, use Blender, Adobe Illustrator, and for video editing I was using Adobe Premiere Pro. From the end of my high school career until the middle of my college career, I was interested in designing. By using Photoshop, I was able to do freelance work. I was never able to use Blender in a professional manner because I was ignorant of 3D modeling. I also thought about learning Figma for user interface design as a skill. Ironically, though, it was during our talk that my friend 'Aaka' introduced me to programming. Since networking piqued his interest more than anything, he advised me to study front-end programming and take courses at Codecademy.</p>
+                    <p>It was the end of 2016. Since then, I have been learning HTML 5 and CSS 3 while developing and using front-end development techniques. I was astounded that a few lines of my code could make changes appear in the browser and that it also corresponded with my prior knowledge. I've developed an interest, so I've decided to major in either software engineering or computer science.</p>
+                    <p>I took admission in COMSATS Abbottabad, It was very far from my home city. So I had to made a little sacrifice for it and live as a hostellite for 4 years. I've learned the core concepts of programming languages and many basic concepts about other relative field like compilers, networking, machine learning, artficial intelligence and microprocessor computing. I also had my first job as an internee there in Abbottix. After that I got permanent and had almost 2 years of experience as a Web Developer.</p>
+                    <p>In seven semesters, I finished all of my computer science courses, including my final year project, which focused on developing a mobile application that connects influencers and businesses to conduct business. Businessmen could pay influencers to promote their brands. And business owners could find the ideal influencer to promote their product by simply filtering their needs and finding the right influencer to do so.</p>
+                    <p>Speaking of mobile applications I worked as a freelancer in Flutter for 1.5 years. I completed two of Angela Yu's premium courses on Udemy. She is a Google Flutter Expert. Yes, I realize that I've mentioned my different skills frequently, but I enjoy learning. Because Flutter is a cross-platform framework, I found it to be very fascinating. In it, I've constructed numerous projects.</p>
                     <div class="mt-4">
                         <h5 class="fw-bold mb-4">My Introduction To Programming</h5>
                     </div>
-                    <p>After working for many years delivering Management Information and Business Intelligence dashboards to senior managers and executive committees, I was tasked with building a database that could automatically take input from users to be able to monitor KPI performance of an HR administration team. I developed a Microsoft Access database with advanced functionality using VBA code to accomplish this.</p>
-                    <p>The database was a massive success in fulfilling the manager's objectives and they were extremely happy with it. I now look back on it and view the code in there as rather primitive.</p>
-                    <p>It was this blend of creating an intuitive user interface and a robust and efficient application that had me completely hooked! I studied several books and courses on VBA development and had used it to build a lot of applications across the department.</p>
-                    <p>My VBA code went from strength to strength until, before I knew it, I was building robust dashboards and applications that was saving users across the business time previously taking hundreds of man-hours worth of laborious manual effort to accomplish.</p>
+                    <p>My professional introduction to programming I would say was when I got introduce to a C language in my first semster. I become more familiar with ideas like variables, if-else statements, and Object Oriented Programming. I then understand how the logic of the software's back end works. My understanding of how our data is stored and relationships formed between them has also improved thanks to the database course.</p>
+                    <p>Python was first presented during my second semester. Its widespread use led me to conclude right away that the language was strong and powerful. However, I decided against it because I was intrigued by Flutter at the time. I did go for it during my fifth semester machine learning course, when I started a Python course offered by Pierian Training.</p>
                     <table class="mb-3 project-meta">
                         <tbody>
                             <tr>
@@ -44,7 +43,8 @@
                             </tr>
                         </tbody>
                     </table>
-                    <p>A bit of further research led me to realise its popularity as a language for scripting, web development, and data analysis. I started learning the Data Science libraries first which seemed incredibly intuitive to me invariably due to Pandas' similarities with Excel.</p>
+                    <p>A bit of further research led me to realise its popularity as a language for scripting, web development, and data analysis.</p>
+                    <p>I required a framework that would allow me to fully utilize my Python knowledge and experience, beyond just using it in the command prompt. I therefore had two options for the framework: Django and Flask. I selected Django because it supports ORM, which eliminated the need for me to write SQL queries for my database, and it uses the MVT architectural structure, which is more structured. You only need to write Python classes and attributes for WSGI and ORM to take care of it for you.</p>
                     <p>I continued my learning journey by studying more courses on Udemy, reading books, and writing scripts. When GitHub introduced free private repositories, I started to create more projects and push them to my remote repos.</p>
                     <p>After feeling more confident with my code, I started using public repositories too and finally building a portfolio which has grown considerably in time both in terms of the number of projects, the variety of features and the testing coverage.</p>
                 </div>
@@ -57,20 +57,20 @@
     <div class="container single-col-max-width">
         <h3 class="text-center mb-4">10 Questions to Learn More About Me</h3>
         <div class="text-center mb-5">Here are a few answers to questions to give you more of a picture about me as a person. They start with professional questions and then move onto more personal ones.</div>
-        <div id="accordionExample" class="accordion accordion-flush theme-bg-light">
-            <div class="accordion-item mb-0">
+        <div class="accordion accordion-flush theme-bg-light" id="accordionFaq" >
+            <div class="accordion-item mb-0 rounded">
                 <h5 class="accordion-header" id="headingOne">
-                    <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Other than Python what programming skills do you have?
+                    <button class="accordion-button shadow-none rounded fw-bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        <i class="fa fa-solid fa-circle-question fa-lg me-3"></i>Other than Python what programming skills do you have?
                     </button>
                 </h5>
+                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
+                    <div class="accordion-body">
+                        <p>Naturally, having built a portfolio, I have some skills in other languages and/or programming constructs/disciplines. Throughout the portfolio, there is evidence of using Sass, HTML, etc. In terms of languages, I also know some JavaScript and React but I cannot say that it's at the same level as my Python/Django.</p>
+                        <p>I can add sprinklings of JavaScript to my projects to augment their functionality. This is evidenced with some of the features across my portfolio.</p>
+                    </div>
+                </div>
             </div>
-            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <p>Naturally, having built a portfolio, I have some skills in other languages and/or programming constructs/disciplines. Throughout the portfolio, there is evidence of using Sass, HTML, etc. In terms of languages, I also know some JavaScript and React but I cannot say that it's at the same level as my Python/Django.</p>
-                    <p>I can add sprinklings of JavaScript to my projects to augment their functionality. This is evidenced with some of the features across my portfolio.</p>
-                </div>
-                </div>
         </div>
     </div>
 </section>
