Favicon - Updated & About - Faq Content Added

--- a/jawaddev/core/static/core/css/style.css
+++ b/jawaddev/core/static/core/css/style.css
@@ -684,7 +684,7 @@ body.dark-mode .social-list .list-inline-item svg {
 }
 
 body.dark-mode hr {
-    color: rgba(0, 0, 0, 0.4);
+    border-color: rgba(255, 255, 255, 0.08);
 }
 
 body.dark-mode .site-footer {
