--- a/jawaddev/core/templates/core/base.html
+++ b/jawaddev/core/templates/core/base.html
@@ -9,6 +9,13 @@
 
     <!-- Set the favicon -->
     <link rel="icon" type="image/png" href="{% static 'core/images/favicon.ico' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'core/images/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'core/images/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'core/images/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'core/images/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static 'core/images/safari-pinned-tab.svg' %}" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#603cba">
+    <meta name="theme-color" content="#ffffff">
 
     <title>{% block title %}JawadDev{% endblock title %}</title>
 
