Deployment - Railway - Content-Updated

--- a/expensetracker/templates/expensetracker/expense_profile_verify.html
+++ b/expensetracker/templates/expensetracker/expense_profile_verify.html
@@ -9,7 +9,7 @@ Expense Tracker Verify | {{block.super}}
 
 <section class="expense-tracker-section">
     <div class="container d-flex shadow py-5 justify-content-center">
-        <div class="auth-wrapper shadow theme-bg-light rounded p-5">
+        <div class="auth-wrapper shadow theme-bg-light rounded p-md-5 p-2">
             <h5 class="auth-heading text-center mb-3">Verify as a Expense User</h5>
             <form method="POST" id='expense-profile-verify-form'>
                 {% csrf_token %}
