--- a/expensetracker/templates/expensetracker/expenseprofile_form.html
+++ b/expensetracker/templates/expensetracker/expenseprofile_form.html
@@ -8,7 +8,7 @@ Expense Tracker Form | {{block.super}}
 {% block content %}
 <section class="expense-tracker-section">
     <div class="container d-flex shadow py-5 justify-content-center">
-        <div class="auth-wrapper shadow theme-bg-light rounded p-5">
+        <div class="auth-wrapper shadow theme-bg-light rounded p-md-5 p-2">
             <h5 class="auth-heading text-center mb-3">Add a Expense User</h5>
             <form method="POST" id='expense-tracker-form'>
                 {% csrf_token %}
