Deployment - Railway - Content-Updated

--- a/core/templates/errors/404.html
+++ b/core/templates/errors/404.html
@@ -6,7 +6,7 @@
 {% block content %}
 
     <div class="error-section text-center">
-        <img src="{% static 'core/images/404.png' %}"/>
+        <img src="{% static 'core/images/404.png' %}" height="200"/>
     </div>
 
 {% endblock content %}
