--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Meta -->
@@ -84,9 +85,6 @@
 
   <!-- Font Awesome JS -->
   <script src="https://kit.fontawesome.com/8651153301.js" crossorigin="anonymous"></script>    
-
-  <!-- JS Utilities -->
-  <!-- <script src="{% static 'core/js/main.js' %}"></script> -->
 
   <!-- Dark Mode -->
   <script src="{% static 'core/plugins/js.cookie.min.js' %}"></script>
