Feat: BackBlaze Storage Bucket for Media Files

--- a/core/templates/errors/500.html
+++ b/core/templates/errors/500.html
@@ -6,7 +6,7 @@
 {% block content %}
 
     <div class="error-section text-center">
-        <img src="{% static 'core/images/500.png' %}"/>
+        <img src="{% static 'core/images/500.png' %}" height="400"/>
     </div>
 
 {% endblock content %}
