Feat: BackBlaze Storage Bucket for Media Files

--- a/core/templates/errors/404.html
+++ b/core/templates/errors/404.html
@@ -5,8 +5,8 @@
 
 {% block content %}
 
-    <div class="error-section text-center">
-        <img src="{% static 'core/images/404.png' %}" height="400"/>
+    <div class="error-section text-center py-5">
+        <img src="{% static 'core/images/404.png' %}" height="300"/>
     </div>
 
 {% endblock content %}
