Feat: Dynamic Project Review View Added

--- a/home/templates/home/cv.html
+++ b/home/templates/home/cv.html
@@ -108,7 +108,7 @@
                                 <h3 class="text-uppercase cv-section-heading mb-4">Project / Apps</h3>
                                 <div class="item mb-3">
                                     <!-- Django Blog -->
-                                    {% with app_url="https://jawaddev-production.up.railway.app/blog/" sc_url="https://github.com/Estphu/JawadDev/tree/master/jawaddev/blog" title="Django Blog" desc="A full CRUD application using Django’s models, views, and templates" %}
+                                    {% with app_url="https://jawaddev-production.up.railway.app/blog/" sc_url="https://github.com/Estphu/JawadDev/tree/master/jawaddev/blog" title="Django Blog" desc="A full CRUD application using Django’s models, views, and templates" pr_url="django-blog" %}
                                         {% include "home/widgets/cv-project-card.html" %}
                                     {% endwith %}
                                     {% with app_url="https://jawaddev-production.up.railway.app/api/blog/posts/" sc_url="https://github.com/Estphu/JawadDev/tree/master/jawaddev/api" title="Django Blog REST API Endpoints" desc="API endpoints enabling front-end developers to consume with their preferred framework" %}
